name:                primref
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.PrimRef
  -- other-modules:       
  other-extensions:    CPP, MagicHash, RoleAnnotations, UnboxedTuples
  build-depends:       base >=4.7 && <4.8, primitive >=0.5 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
